# raytracer

./: .gitattributes  .gitignore  CMakeLists.txt  camera.h  hittable.h  hittable_list.h  interval.h  main.cpp  sphere.h  utility.h
include/: aabb.h  bvh.h  camera.h  colour.h  hittable.h  hittable_list.h  interval.h  material.h  ray.h  sphere.h  utility.h  vec3.h  viewport.h
include/glad/: glad.h
src/: glad.c  main.cpp
